--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <div class="container">
-      <img src="assets/images/image1.jpg" id="image1" onmouseover="changeImage()" alt="1ère image d'illustration"/>
-      <img src="assets/images/image2.jpg" id="image2" onmouseover="changeImage2()" alt="2ème image d'illustration"/>
-      <img src="assets/images/image3.jpg" id="image3" onmouseover="changeImage3()" alt="3ème image d'illustration"/>
-      <img src="assets/images/image4.jpg" id="image4" onmouseover="changeImage4()" alt="4ème image d'illustration"/>
-      <img src="assets/images/image5.jpg" id="image5" onmouseover="changeImage5()" alt="5ème image d'illustration"/>
+      <img src="assets/images/image1.jpg" onmouseover="changeImage(id)" id="image1" alt="1ère image d'illustration"/>
+      <img src="assets/images/image2.jpg" onmouseover="changeImage(id)" id="image2" alt="2ème image d'illustration"/>
+      <img src="assets/images/image3.jpg" onmouseover="changeImage(id)" id="image3" alt="3ème image d'illustration"/>
+      <img src="assets/images/image4.jpg" onmouseover="changeImage(id)" id="image4" alt="4ème image d'illustration"/>
+      <img src="assets/images/image5.jpg" onmouseover="changeImage(id)" id="image5" alt="5ème image d'illustration"/>
     </div>
     <script src="assets/js/js5.js"></script>
   </body>
